Move string processing functions to strutil

--- a/lab3-reverse-polish-calc/makefile
+++ b/lab3-reverse-polish-calc/makefile
@@ -4,19 +4,20 @@ COMPILE = $(CC) $(CFLAGS)
 
 TARGET = calculator.out
 
+
 all: $(TARGET)
 
-$(TARGET): calc.o stack.o token.o
-	$(COMPILE) -o $(TARGET) calc.o stack.o token.o
+$(TARGET): calc.o stack.o strutil.o
+	$(COMPILE) -o $(TARGET) calc.o stack.o strutil.o
 
-calc.o: calc.c calc.h stack.h token.h
+calc.o: calc.c calc.h stack.h strutil.h
 	$(COMPILE) -c calc.c
 
 stack.o: stack.c stack.h
 	$(COMPILE) -c stack.c
 
-token.o: token.c token.h
-	$(COMPILE) -c token.c
+strutil.o: strutil.c strutil.h
+	$(COMPILE) -c strutil.c
 
 clean:
 	$(RM) $(TARGET) *.o
