Add infix to postfix function

--- a/lab4-calculator/makefile
+++ b/lab4-calculator/makefile
@@ -7,10 +7,13 @@ TARGET = calculator.out
 
 all: $(TARGET)
 
-$(TARGET): postfix.o stack.o strutil.o
-	$(COMPILE) -o $(TARGET) postfix.o stack.o strutil.o
+$(TARGET): calculator.o postfix.o stack.o strutil.o tokenizer.o
+	$(COMPILE) -o $(TARGET) calculator.o postfix.o stack.o strutil.o tokenizer.o
 
-postfix.o: postfix.c postfix.h stack.h strutil.h
+calculator.o: calculator.c postfix.h
+	$(COMPILE) -c calculator.c
+
+postfix.o: postfix.c postfix.h stack.h strutil.h tokenizer.h
 	$(COMPILE) -c postfix.c
 
 stack.o: stack.c stack.h
@@ -18,6 +21,9 @@ stack.o: stack.c stack.h
 
 strutil.o: strutil.c strutil.h
 	$(COMPILE) -c strutil.c
+
+tokenizer.o:  tokenizer.c  tokenizer.h
+	$(COMPILE) -c tokenizer.c	
 
 clean:
 	$(RM) $(TARGET) *.o
