Add all necessary functions and test program

--- a/lab6-hashtable/makefile
+++ b/lab6-hashtable/makefile
@@ -3,10 +3,13 @@ CFLAGS =
 COMPILE = $(CC) $(CFLAGS)
 
 
-all: hashtable.out
+all: lab6.out
 
-hashtable.out: hashtable.o strlist.o
-	$(COMPILE) -o hashtable.out hashtable.o strlist.o
+lab6.out: lab6.o hashtable.o strlist.o
+	$(COMPILE) -o lab6.out lab6.o hashtable.o strlist.o
+
+lab6.o: lab6.c hashtable.h
+	$(COMPILE) -c lab6.c
 
 hashtable.o: hashtable.c strlist.h
 	$(COMPILE) -c hashtable.c
